--- a/css/site.css
+++ b/css/site.css
@@ -77,7 +77,7 @@ code[class*="language-"],
 }
 
 .logoFont{
-    font-family: 'Black Ops One', sans-serif;
+    font-family: sans-serif;
     font-weight: 100;
 }
 
